[package]
name = "my-onvif"
version = "0.1.0"
authors = ["bfjelds"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
async-trait = "0.1.0"
futures = "0.3.0"
failure = "0.1.0"
#onvif-rs = { path = "../onvif-rs" } # { git = "https://github.com/lumeohq/onvif-rs" }
tokio = { version = "0.2", features = ["full"] }
yaserde = "0.3.13"
yaserde_derive = "0.3.13"
serde = "^1.0"
serde_json = "^1.0"
xml-rs = "0.8.0"
log = "0.4.8"
uuid = { version = "0.8.1", features = ["v4"] }
env_logger = "0.6.0"