[package]
name = "my-onvif"
version = "0.1.0"
authors = ["bfjelds"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
async-trait = "0.1.0"
futures = "0.3.0"
failure = "0.1.0"
#onvif-rs = { path = "../onvif-rs" } # { git = "https://github.com/lumeohq/onvif-rs" }
tokio = { version = "0.2", features = ["full"] }
yaserde = "0.3.13"
yaserde_derive = "0.3.13"
serde = "^1.0"
serde_json = "^1.0"
xml-rs = "0.8.0"
log = "0.4.8"
uuid = { version = "0.8.1", features = ["v4"] }
env_logger = "0.6.0"

hyper = "0.13.5"
mime = "0.3"
mockall = "0.6.0"
prost = "0.6"
rand = "0.7"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
sxd-document = "0.3.0"
sxd-xpath = "0.4.0"
tokio-core = "0.1"
tonic = "0.1"
tower = "0.3" 

async-stream = "0.2"
blake2 = "0.8.0"
chrono = "0.4.10"
futures-core = "0.3"
futures-util = "0.3"
futures-old = { version = "0.1", package = "futures" }

bytes = "0.5"
